--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 .container{
     width: 336px;
     height: 236px;
@@ -13,8 +17,44 @@
 }
 
 h1 {
-    font-family: 'Roboto', sans-serif;
     text-align: center;
     font-size: 26px;
     line-height: 30px;
+}
+
+input {
+    margin: 0 25px;
+    width: 286px;
+    height: 40px;
+    border: 1px solid #C4C4C4;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+
+.add-button {
+    width: 129px;
+    height: 42px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: right;
+    background-color: #833AE0;
+    color: white;
+    margin: 20px 103px;
+    position: relative;
+    padding: 3px 20px 3px 0;
+    border-radius: 71px;
+}
+
+.round {
+    height: 33px;
+    width: 46px;
+    background-color: #9A53F1;
+    position: absolute;
+    top: 0px;
+    text-align: center;
+    font-size: 14px;
+    padding: 15px 0 0 0;
+    border-radius: 50px;
 }
