--- a/main.css
+++ b/main.css
@@ -22,6 +22,19 @@ h1 {
     line-height: 30px;
 }
 
+.sort-arrow {
+    width: 20px;
+    color: #C4C4C4;
+}
+
+.sort-arrow-up{
+    display: none;
+}
+
+.sort-arrow-down{
+
+}
+
 input {
     margin: 0 25px;
     width: 286px;
@@ -62,16 +75,3 @@ input {
     border-radius: 50px;
 }
 
-.cancel {
-    width: 20px;
-    height: 20px;
-    border: 1px solid #C4C4C4;
-    color: #C4C4C4;
-    text-align: center;
-    padding: 1px 0 0;
-    border-radius: 50px;
-    position: absolute;
-    right: 35px;
-    bottom: 8px;
-
-}
