--- a/main.css
+++ b/main.css
@@ -42,10 +42,6 @@ h1 {
   display: none;
 }
 
-.sort-arrow-down{
-
-}
-
 input {
     margin: 0 25px;
     width: 286px;
@@ -74,6 +70,7 @@ input {
 
 .input-container{
     position: relative;
+    cursor: move;
 }
 
 .round {
