--- a/main.css
+++ b/main.css
@@ -43,16 +43,16 @@ h1 {
 }
 
 input {
-    margin: 0 25px;
-    width: 286px;
+    border: none;
+    width: 100%;
     height: 40px;
-    border: 1px solid #C4C4C4;
     box-sizing: border-box;
-    border-radius: 10px;
     padding: 0 40px;
-}
+    border-radius: 10px;
+    opacity: 0;
+   }
 
-input:hover{
+.input-container:hover{
     background-color: #FFDC40;
 }
 
@@ -75,6 +75,11 @@ input:hover{
 .input-container{
     position: relative;
     cursor: move;
+    /*padding: 0 25px;*/
+    width: 100%;
+    height: 40px;
+    box-sizing: border-box;
+    border-radius: 10px;
 }
 
 .round {
@@ -93,7 +98,7 @@ input:hover{
     width: 20px;
     color: #C4C4C4;
     position: absolute;
-    left: 40px;
+    left: 15px;
     top: 10px;
 }
 
@@ -106,7 +111,7 @@ input:hover{
    color: #C4C4C4;
    position: absolute;
    top: 10px;
-   right: 40px;
+   right: 15px;
 }
 
 .delete:hover {
@@ -114,6 +119,12 @@ input:hover{
     color: #FFF;
     mix-blend-mode: multiply;
     border-radius: 50px;
+}
+
+.parent-container {
+    border: 1px solid #C4C4C4;
+    border-radius: 10px;
+    margin: 0 28px;
 }
 
 /*.delete:hover {
